# webmtg-docs

./: .gitignore  .prettierignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  login.md  meeting.md
docs/static/css/: common.css  custom.css
login/: index.html
meeting/: index.html
search/: search_index.json
static/css/: override.css
