[project]
name = "webmtg-docs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "enjnier", email = "71798649+enjnier@users.noreply.github.com" }
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.11",
    "mkdocs-glightbox>=0.3.7",
    "mkdocs-monorepo-plugin>=1.1.0",
    "mkdocs-table-reader-plugin>=2.1.0",
    "setuptools>=69.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
serve = "mkdocs serve -a 127.0.0.1:8100"
